# dynacase-core

./: .gitignore  .gitmodules  ChangeLog  DATA_en.po  DATA_fr.po  DAV_en.po  DAV_fr.po  FREEDOM.vault.in  FREEDOM_en.po  FREEDOM_fr.po  Makefile.in  README.md  RELEASE  TOOLBOX_en.po  TOOLBOX_fr.po  VAULT_en.po  VAULT_fr.po  VERSION  WHAT.cron  WHAT.spec.in  WHAT_en.po  WHAT_fr.po  WHAT_post.sh  apache.conf.in  apachev.conf.in  apachevi.conf.in  apropos.html.in  auth.php  authent.php  autoloader-ignore  autoloader-ignore-d  configure.in  corePubRule.mk  dbaccess.php.in  dbaccess.php.sample.in  dbaccess.sh.in  freedom-core.spec.in  freedom.conf.in  freedom.cron  guest.php  (+46 more)
Action/: Makefile
Action/Access/: Makefile  access_appl_chg.php  access_user_chg.php  appl_access.php  appl_page.php  change_acl.js  download.php  download.xml  edit.php  edit.xml  edit_object.php  edit_object.xml  filedown.xml  group_access.php  import_export.xml  include.php  modify.php  modify_object.php  object_access.php  role_access.php  upload.php  user_access.php  user_access.xml  user_page.php
Action/Appmng/: action_appl_chg.php  action_control.js  action_edit.php  action_edit.xml  action_mod.php  actionlist.php  actionlist.xml  add_icon_param.xml  add_icon_styles.xml  aff_name.xml  app_control.js  app_delete.php  app_edit.php  app_edit.xml  app_mod.php  app_update.php  applist.php  applist.xml  input_name.xml  param_alist.php  param_alist.xml  param_appl_chg.php  param_control.js  param_cuaccount.php  param_cuaccount.xml  param_culist.php  param_culist.xml  param_cumail.php  param_cumail.xml  param_delete.php  param_edit.php  param_edit.xml  param_mod.php  param_mod.xml  param_style_chg.php  param_ulist.php  param_ulist.xml  paramlist.php  paramlist.xml  style_delete.php  (+12 more)
Action/Authent/: Makefile  authent.php  callbackreqpasswd.css  callbackreqpasswd.php  callbackreqpasswd.xml  callbackreqpasswd_mail.xml  checkauth.php  errno_bug_639.php  errno_bug_639.xml  (+16 more)
Admin/: Class.CheckDb.php  Makefile  admin.css  admin.js  appinstall.php  checkinstall.php  checklist.php  htaccess.in  htpasswd  index.html  mime-user.conf.sample  pginfo.php  pgsize.php  phpinfo.php  shttpd  wg.css  wgcheck.php  wgdbcreate.php  wgexecute.php  winit.html  winit.php
Api/: DocRelInit.php  FullFileIndex.php  Makefile  SetDocVaultIndex.php  SetDocVaultIndex.php.in  VaultExamine.php  VaultIndexInit.php  accountRefreshGroup.php  appadmin.php  appadmin.php.in  benchmark_search.php  change_action.php  checkVault.php  cleanContext.php  cleanContext.sql  cleanFamily.php  cleanFamilyParameter.php  cleanFileName.php  cleanFullContext.sql  cleanVaultOrphans.php  crontab.php  csv2sql.php  destroyFamily.php  dynacaseDbCleaner.php  dynacaseDbCleaner.sql  dynacaseDbRealCleaner.sql  exportAccounts.php  export_useracl.php  family_graphviz.php  fdl_adoc.php  fdl_cronexec.php  fdl_dbaccess.php  fdl_deletefamily.php  fdl_execute.php  fdl_export1nf.php  fdl_pkey.php  fdl_resetprofiling  fdl_resetprofiling.php  fdl_sendmail.php  fdl_testmemory.php  (+52 more)
App/: Makefile
App/Core/: CORE.app  CORE_init.php.in  CORE_migr_0.0.5  CORE_migr_0.0.9  CORE_migr_0.1.2  CORE_migr_0.1.3  CORE_migr_0.1.4  CORE_migr_0.1.8  CORE_migr_0.2.1  CORE_migr_0.2.5  CORE_migr_0.3.0  CORE_migr_0.3.7  CORE_migr_1.1.1  CORE_migr_1.1.3  CORE_migr_1.2.1  CORE_migr_2.1.1  CORE_migr_2.1.3  CORE_migr_2.11.2  CORE_migr_2.11.6  CORE_migr_2.13.0  CORE_migr_2.13.12  CORE_migr_2.13.2  CORE_migr_2.14.1  CORE_migr_2.3.1  CORE_migr_2.3.2  CORE_migr_2.5.4  CORE_migr_3.0.18  CORE_pmigr_2.0.0  CORE_post  CORE_post.in  CORE_postmigr_3.1.2  CORE_postmigr_3.2.12  CORE_postmigr_3.2.5  CORE_postmigr_3.2.6  CORE_premigr_3.2.0  CORE_premigr_3.2.10  CORE_premigr_3.2.17  CORE_premigr_3.2.18  CORE_premigr_3.2.21  CORE_premigr_3.2.23  (+12 more)
App/Core/cleanContext/: Makefile  cleanContext_02.sql  cleanContext_03.sql  cleanContext_04.sql  cleanFullContext_01.sql  cleanFullContext_02.sql  cleanFullContext_03.sql  cleanFullContext_04.sql  cleanFullContext_05.sql  cleanFullContext_06.sql  cleanFullContext_07.sql  cleanFullContext_08.sql
CONTRIB/: Makefile  freedom-cleanattr.sh
Class/: Class.Form1NF.php  Makefile
Config/: Makefile  dbaccess.php.in  mime.conf
Css/: Makefile
Doc/: Makefile  fdlapi.odt
Expire/: Makefile  chgpasswd.php  expire.php  expire.shtml  tryexpire.html
Images/: Makefile
JavaScript/: Makefile  fdl_tooltip.js
Share/: AnchorPosition.js  Class.ActionRouter.php  Class.Dcp_Utils_CSVFormatDetector.php  Class.Dcp_Utils_Types.php  Class.Dcp_Utils_WStart.php  Class.Dcp_Utils_WStartCLI.php  Class.Dcp_WSHMailError.php  Class.Fdl_Mail_Mime.php  Class.TEClient.php  Class.processExecuteAPI.php  Class.twoDimensionalArray.php  Class.twoDimensionnalArray.php  ColorPicker2.js  DHTMLapi.js  Lib.Address.js  Lib.Color.php  Lib.Common.php  Lib.Date.php  Lib.FileDir.js  Lib.FileDir.php  Lib.FileMime.php  Lib.General.js  Lib.Http.php  Lib.Main.php  Lib.Phpini.php  Lib.Prefix.php  Lib.Prefix.php.in  Lib.System.php  Lib.TEUtil.php  Lib.Time.php  Lib.WCheck.php  Makefile  Migr008_009.sql  MimeExtension.php  OptionPicker.js  PopupWindow.js  anakeen-doc.css  autoclose.js  autoload.php  classAutoloader.php  (+23 more)
Style/: Makefile  size.css  size.php
Supervisor/: Makefile  getServices.php  htaccess.in  index.html  shttpd  supervisor.css  supervisor.js
Test/: Makefile  PU_Framework_TestDocument.php  PU_Framework_TestSuiteDocument.php  PU_SuiteDocumentAll.php  PU_SuiteFdlAll.php  PU_TestDocument.php  info.xml.in
Zone/: Makefile
debian/: Makefile  changelog.in  control  copyright  debian.patch  dirs  freedom.conf  postinst  prerm  rules
locale/: Makefile
programs/: Makefile  account_init.bash  app_post.bash  check_autoloader.php  core_appinitialize.php  core_environment.bash  core_environnement.bash  core_initialize.bash  core_sanitize.bash  core_update.bash  flock.php  init_admin_passwd.php  json_concat.php  parallel.php  po2js.php  post_migration.php  pre_migration.php  reconfigure_core_tmpdir.php  record_application.bash  register_client_name.bash  set_param.bash  toolbox_reconfigure.bash  update_catalog.bash
(+2253 files in other folders)
