#   Autoconf script for libphp
#
#   Copyright 2000 Yannick Le Briquer <yannick.lebriquer@anakeen.com>
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.28 2009/01/06 15:15:13 jerome Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=freedom-toolbox
AC_SUBST(PACKAGELIB)
PACKAGELIB=FDL
AC_SUBST(TODAY)
TODAY=`date`
AC_SUBST(APPNAME)
APPNAME=TOOLBOX

LICENSE="http://www.fsf.org/licensing/licenses/agpl-3.0.html GNU Affero General Public License"
AC_SUBST(LICENSE)

ac_default_prefix=/usr/share/what

AC_SUBST(PUBRULE)
PUBRULE=
AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)
if test "x$PUBRULE" != "x"; then
  PUBRULEDIR=$PUBRULE
else
  if test "x$PUBRULEDIR" == "x"; then
     AC_CHECK_FILE($HOME/anakeen/devtools/PubRule, PUBRULEDIR=$HOME/anakeen/devtools/)
     if test "x$PUBRULEDIR" = "x"; then
          PUBRULEDIR=.
     fi
  fi
fi
AC_CHECK_FILE($PUBRULEDIR/PubRule, PUBRULE=$PUBRULEDIR)
if test "x$PUBRULE" = "x"; then
  AC_MSG_ERROR([Could not find PubRule])
fi
AC_MSG_NOTICE([PubRule located at $PUBRULE])

AC_SUBST(LOGLEVEL)
LOGLEVEL=IWEF
AC_ARG_WITH(log-level,
[  --with-log-level=log-level   Set Log Level], LOGLEVEL=$withval)

AC_SUBST(DEBUG)
DEBUG=N
AC_ARG_ENABLE(debug,
[  --enable-debug   Set Debug ], DEBUG=Y)

AC_SUBST(LANG)
LANG=fr_FR
AC_ARG_WITH(lang,
[  --with-lang=lang   Set Lang ], LANG=$withval)

AC_SUBST(PGSERVICE_CORE)
PGSERVICE_CORE=anakeen
AC_ARG_WITH(pgservicecore,
[  --with-pgservice_core=postgresql service for core database (default "anakeen") ], PGSERVICE_CORE=$withval)

AC_SUBST(PGSERVICE_FREEDOM)
PGSERVICE_FREEDOM=freedom
AC_ARG_WITH(pgservicefreedom,
[  --with-pgservice_freedom=postgresql service for freedom database (default "freedom") ], PGSERVICE_FREEDOM=$withval)

AC_SUBST(FREEDOM_CONTEXT)
FREEDOM_CONTEXT=default
AC_ARG_WITH(freedomcontext,
[  --with-freedom_context=name of the Freedom context (default "default") ], FREEDOM_CONTEXT=$withval)

AC_SUBST(APACHECONFDIR)
APACHECONFDIR=/etc/httpd/httpd.conf
AC_ARG_WITH(apacheconfdir,
[  --with-apacheconfdir=apache config dir (default /etc/httpd/httpd.conf)], APACHECONFDIR=$withval)

AC_SUBST(DBHOST)
DBHOST=localhost
AC_ARG_WITH(dbhost,
[  --with-dbhost=host the PostgreSql Host (default localhost)  ], DBHOST=$withval)

AC_SUBST(DBNAME)
DBNAME=freedom
AC_ARG_WITH(dbname,
[  --with-dbname=name  the database name (default anakeen)], DBNAME=$withval)

AC_SUBST(DBUSER)
DBUSER=anakeen
AC_ARG_WITH(dbuser,
[  --with-dbuser=username  the database user (default anakeen)], DBUSER=$withval)

AC_SUBST(DBPORT)
DBPORT=5432
AC_ARG_WITH(dbport,
[  --with-dbport=port number  the database port (default 5432)], DBPORT=$withval)

AC_SUBST(HTTPUSER)
HTTPUSER=http
AC_ARG_WITH(httpuser,
[  --with-httpuser=user id for httpd process (default http)], HTTPUSER=$withval)

dnl get php pear path
AC_SUBST(PEAR)
AC_ARG_WITH(pear, \
  [  --with-pear=PHP PEAR path], \
  PEAR="$withval",
  PEAR="" \
)
if test "x$PEAR" = "x" ; then
  AC_CHECK_PROG(PEARCMD, pear, pear)
  if test "x$PEARCMD" = "x" ; then
    AC_MSG_ERROR(Could not find the pear command... Specify the PHP Pear path with --with-pear)
  fi
  AC_MSG_CHECKING(for pear config-get php_dir)
  PEAR=`"$PEARCMD" config-get php_dir`
  if test "x$PEAR" = "x" ; then
    AC_MSG_ERROR(Looks like the pear command is broken... Specify the PHP Pear path with --with-pear)
  fi
  AC_MSG_RESULT($PEAR)
fi

AC_OUTPUT(Makefile \
          App/Access/ACCESS_init.php \
          App/Appmng/APPMNG_init.php \
          App/Authent/AUTHENT_init.php \
          App/Core/CORE_init.php \
          App/Data/DATA_init.php \
          App/Extui/EXTUI_init.php \
          App/Dav/DAV_init.php \
          App/Dav/DAV_conf.apache \
          App/Fdl/FDL_init.php \
          App/Fdc/FDC_init.php \
          App/Fdl/tsearch2_fr.sql \
          App/Fgsearch/FGSEARCH_init.php \
          App/Freedom/FREEDOM_init.php  \
          App/Fusers/FUSERS_init.php \
          App/Generic/GENERIC_init.php \
          App/Onefam/ONEFAM_init.php \
          App/Usercard/USERCARD_init.php \
          App/Users/USERS_init.php \
          App/Vault/VAULT_init.php \
          Api/SetDocVaultIndex.php \
          Api/updateclass.php \
          FREEDOM.vault \
          Share/Lib.Prefix.php  \
          dbaccess.php.sample \
          Admin/htaccess \
          htaccess \
          info.xml \
          apropos.html )
