#   Autoconf script for libphp
#
#   Copyright 2000 Yannick Le Briquer <yannick.lebriquer@anakeen.com>
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.28 2009/01/06 15:15:13 jerome Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=dynacase-core
AC_SUBST(PACKAGELIB)
PACKAGELIB=FDL
AC_SUBST(TODAY)
TODAY=`date`
AC_SUBST(APPNAME)
APPNAME=TOOLBOX

AC_SUBST(ROOTDIR)
ROOTDIR=`pwd`


LICENSE="http://www.fsf.org/licensing/licenses/agpl-3.0.html GNU Affero General Public License"
AC_SUBST(LICENSE)

ac_default_prefix=/var/www/dynacase

AC_SUBST(PUBRULE)
PUBRULE="$(pwd)/buildTools"
AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)
if test -z ${PUBRULE}; then
    PUBRULE=`pwd`
fi
if test -f $PUBRULE/PubRule; then
    AC_MSG_NOTICE([PubRule located at $PUBRULE])
else
    AC_MSG_ERROR([Could not find PubRule])
fi


AC_SUBST(LOGLEVEL)
LOGLEVEL=WEF
AC_ARG_WITH(log-level,
[  --with-log-level=log-level   Set Log Level], LOGLEVEL=$withval)







dnl get php pear path
AC_SUBST(PEAR)
AC_ARG_WITH(pear, \
  [  --with-pear=PHP PEAR path], \
  PEAR="$withval",
  PEAR="" \
)
if test "x$PEAR" = "x" ; then
  AC_CHECK_PROG(PEARCMD, pear, pear)
  if test "x$PEARCMD" = "x" ; then
    AC_MSG_ERROR(Could not find the pear command... Specify the PHP Pear path with --with-pear)
  fi
  AC_MSG_CHECKING(for pear config-get php_dir)
  PEAR=`"$PEARCMD" config-get php_dir`
  if test "x$PEAR" = "x" ; then
    AC_MSG_ERROR(Looks like the pear command is broken... Specify the PHP Pear path with --with-pear)
  fi
  AC_MSG_RESULT($PEAR)
fi

AC_OUTPUT(
    Makefile \
    App/Authent/AUTHENT_init.php \
    App/Core/CORE_init.php \
    App/Dav/DAV_init.php \
    App/Dav/DAV_conf.apache \
    App/Fdl/FDL_init.php \
    App/Fdc/FDC_init.php \
    App/Fgsearch/FGSEARCH_init.php \
    App/Freedom/FREEDOM_init.php  \
    App/Generic/GENERIC_init.php \
    Api/updateclass.php \
    Share/Lib.Prefix.php  \
    Supervisor/htaccess \
    htaccess \
    info.xml \
    Test/info.xml
)
