#   Autoconf script for libphp
#
#   Copyright 2000 Yannick Le Briquer <yannick.lebriquer@anakeen.com>
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.28 2009/01/06 15:15:13 jerome Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./Makefile.in)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=dynacase-core
AC_SUBST(PACKAGELIB)
PACKAGELIB=FDL
AC_SUBST(TODAY)
TODAY=`date`
AC_SUBST(APPNAME)
APPNAME=TOOLBOX

AC_SUBST(ROOTDIR)
ROOTDIR=`pwd`

ac_default_prefix=/var/www/dynacase

AC_SUBST(PUBRULE)
PUBRULE="$(pwd)/buildTools"
AC_ARG_WITH(pubrule, [  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)
if test -z ${PUBRULE}; then
    PUBRULE=`pwd`
fi
if test -f $PUBRULE/PubRule; then
    AC_MSG_NOTICE([PubRule located at $PUBRULE])
else
    AC_MSG_ERROR([Could not find PubRule])
fi


AC_SUBST(LOGLEVEL)
LOGLEVEL=WEF
AC_ARG_WITH(log-level,
[  --with-log-level=log-level   Set Log Level], LOGLEVEL=$withval)



AC_OUTPUT(
    Makefile \
    App/Authent/AUTHENT_init.php \
    App/Core/CORE_init.php \
    App/Dav/DAV_init.php \
    App/Dav/DAV_conf.apache \
    App/Fdl/FDL_init.php \
    App/Fdc/FDC_init.php \
    App/Fgsearch/FGSEARCH_init.php \
    App/Freedom/FREEDOM_init.php  \
    App/Generic/GENERIC_init.php \
    Api/updateclass.php \
    Supervisor/htaccess \
    htaccess \
    info.xml \
    Test/info.xml
)
