#   Autoconf script for libphp
#
#   Copyright 2000 Yannick Le Briquer <yannick.lebriquer@anakeen.com>
#
#   This program is free software; you can redistribute it and/or
#   modify it under the terms of the GNU General Public License
#   as published by the Free Software Foundation; either version
#   2 of the License, or (at your option) any later version.
#
AC_REVISION($Id: configure.in,v 1.1 2002/01/08 12:41:34 eric Exp $)
dnl
dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.13)
AC_INIT(./index.php)
AC_SUBST(VERSION)
VERSION=`cat VERSION`
AC_SUBST(RELEASE)
RELEASE=`cat RELEASE`
AC_SUBST(PACKAGE)
PACKAGE=CORE

ac_default_prefix=/home/httpd/what

AC_SUBST(PUBRULE)
PUBRULE=$HOME/anakeen/what
AC_ARG_WITH(pubrule,
[  --with-pubrule=dir	Path to PubRule], PUBRULE=$withval)

AC_SUBST(LOGLEVEL)
LOGLEVEL=IWEF
AC_ARG_WITH(log-level,
[  --with-log-level=log-level   Set Log Level], LOGLEVEL=$withval)

AC_SUBST(LANG)
LANG=fr
AC_ARG_WITH(lang,
[  --with-lang=lang   Set Lang ], LANG=$withval)

AC_SUBST(DBHOST)
DBHOST=localhost
AC_ARG_WITH(dbhost,
[  --with-dbhost=host the PostgreSql Host (default localhost)  ], DBHOST=$withval)

AC_SUBST(DBNAME)
DBNAME=anakeen
AC_ARG_WITH(dbname,
[  --with-dbname=name  the database name (default anakeen)], DBNAME=$withval)

AC_SUBST(DBUSER)
DBUSER=anakeen
AC_ARG_WITH(dbuser,
[  --with-dbuser=username  the database user (default anakeen)], DBUSER=$withval)

AC_SUBST(DBPORT)
DBPORT=5432
AC_ARG_WITH(dbport,
[  --with-dbport=port number  the database port (default 5432)], DBPORT=$withval)

AC_OUTPUT(Makefile:Makefile.in CORE_init.php:CORE_init.php.in dbaccess.php:dbaccess.php.in CORE.spec:CORE.spec.in apache.conf:apache.conf.in)
